fix: image alignment and link opens in new tab

--- a/src/style.css
+++ b/src/style.css
@@ -50,14 +50,21 @@ h1 {
     var(--ring-shadow, 0 0 #0000), var(--shadow);
 }
 
-.card > h3 {
+.card > a {
+  color: inherit;
+  text-decoration: inherit;
+  text-transform: inherit;
+}
+
+.card > a > h3 {
+  font-size: 1em;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   text-transform: uppercase;
 }
 
-.card > img {
+.card > a > img {
   width: 100%;
   margin: 1em 0;
   background-position: center;
@@ -65,7 +72,7 @@ h1 {
   background-repeat: no-repeat;
 }
 
-.card > p {
+.card > a > p {
   color: var(--text-color);
   font-size: 0.9em;
 }
